# soft-renderer

./: .gitignore  CMakeLists.txt  cp.sh
include/core/: buffer.h  clipper.h  constant.h  culler.h  fragshader.h  global.h  gpumemory.h  helper.h  pipeline.h  primitive.h  sh-clipper.h  shader.h  sutherlandhodgmanclipper.h  vertex.h  vertexshader.h  warehouse.h  zbuffer.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  buffer.cpp  clipper.cpp  culler.cpp  fragshader.cpp  gpumemory.cpp  pipeline.cpp  primitive.cpp  sh-clipper.cpp  shader.cpp  sutherlandhodgmanclipper.cpp  vertex.cpp  vertexshader.cpp  warehouse.cpp  zbuffer.cpp
tests/: CMakeLists.txt  basic.cpp  clipper-test.cpp  gpumemory-test.cpp  model-test.cpp  openmp-test.cpp  shader-test.cpp  utility-test.cpp  warehouse-test.cpp
